[Mobile UX] Fix tabs on mobile

--- a/app/_assets/stylesheets/index.css
+++ b/app/_assets/stylesheets/index.css
@@ -432,7 +432,7 @@
     @apply tab-button py-3 text-terciary hover:no-underline items-center max-h-11 flex-shrink-0;
 
     &.tab-button__horizontal--active {
-      @apply tab-button--active border-b-2 -mb-0.5 !important;
+      @apply tab-button--active border-b-2 !important;
     }
   }
 
